the notification isn't working

--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "laravel/tinker": "^2.8",
         "league/flysystem-aws-s3-v3": "^3.29",
         "nwidart/laravel-modules": "^10.0",
-        "predis/predis": "^2.3"
+        "predis/predis": "^2.3",
+        "spatie/laravel-permission": "*"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
