--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,8 @@
     "require": {
         "php": "^8.1",
         "guzzlehttp/guzzle": "^7.2",
+        "intervention/image": "^3.11",
+        "intervention/image-laravel": "^1.5",
         "ipe/smsir-php": "^1.0",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
